--- a/HTML/home.html
+++ b/HTML/home.html
@@ -7,80 +7,133 @@
     <title>Document</title>
     <link rel="stylesheet" href="/CSS/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <style>
+        body{
+            background-color: #9aaaba;
+        }
+    </style>
 </head>
 <body>
     <header>
         <nav>
-            <a href="" class="navbar">Shopping cart</a>
-        </nav>
+            <h2 id="shoppingproduct">Shopping products</h2>
+
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
                 <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"/>
-              </svg>
-        <i class="bx bx-shopping-bag"></i>
+            </svg>
+            <i class="bx bx-shopping-bag"></i>
+        </nav>
     </header>
     <section>
-        <div>
-            <h2 id="shoppingproduct">Shopping products</h2>
-        </div>
         <div class="grid">
         <div class="card">
-            <img src="../IMAGES/Samsung Galaxy S23 Ultra.jpeg" alt="" class="img"><hr>
+            <img src="../IMAGES/Samsung Galaxy S23 Ultra.jpeg" alt="Samsung Galaxy S23 Ultra" class="img"><hr>
             <h2>Samsung Galaxy S23 Ultra</h2>
             <del>Rs. 174,999</del>
             <ins class="price">Rs. 124,999</ins>
-            <button>Add to cart</button>
+            <div class="quantity" align="">
+                <button class="decrement">-</button>
+                <span class="quantity-value">1</span>
+                <button class="increment">+</button>
+        </div>
+            <button class="add-to-cart" onclick="alert('Item added to cart!')" >Add to cart</button>
         </div>
         <div class="card">
-            <img src="../IMAGES/Apple IPhone 14 Pro Max.jpeg" alt="" class="img"><hr>
+            <img src="../IMAGES/Apple IPhone 14 Pro Max.jpeg" alt="Apple IPhone 14 Pro Max" class="img"><hr>
             <h2>Apple IPhone 14 Pro Max</h2>
             <del>Rs. 189,999</del>
             <ins class="price">Rs. 127,999</ins>
-            <button>Add to cart</button>
+            <div class="quantity" align="">
+                <button class="decrement">-</button>
+                <span class="quantity-value">1</span>
+                <button class="increment">+</button>
+            </div>
+            <button class="add-to-cart" onclick="alert('Item added to cart!')">Add to cart</button>
         </div>
         <div class="card">
-            <img src="../Images/Vivo X90 Pro.jpeg" alt="" class="img"><hr>
+            <img src="../Images/Vivo X90 Pro.jpeg" alt="Vivo X90 Pro" class="img"><hr>
             <h2>Vivo X90 Pro</h2>
             <del>Rs. 95,999</del>
             <ins class="price">Rs. 84,999</ins>
-            <button>Add to cart</button>
+            <div class="quantity" align="">
+                <button class="decrement">-</button>
+                <span class="quantity-value">1</span>
+                <button class="increment">+</button>
+            </div>
+            <button class="add-to-cart" onclick="alert('Item added to cart!')">Add to cart</button>
         </div>
         <div class="card">
-            <img src="/IMAGES/IQOO 7 Neo.jpg" alt="" class="img"><hr>
+            <img src="/IMAGES/IQOO 7 Neo.jpg" alt="IQOO 7 Neo" class="img"><hr>
             <h2>iQOO Neo 7 5G</h2>
             <del>Rs. 34,999</del>       
             <ins class="price">Rs. 28,999</ins>
-            <button>Add to cart</button>
+            <div class="quantity" align="">
+                <button class="decrement">-</button>
+                <span class="quantity-value">1</span>
+                <button class="increment">+</button>
+            </div>
+            <button class="add-to-cart" onclick="alert('Item added to cart!')">Add to cart</button>
         </div>
         <div class="card">
-            <img src="../IMAGES/Nord CE 3 Lite.jpeg" alt="" class="img"><hr>
+            <img src="../IMAGES/Nord CE 3 Lite.jpeg" alt="Nord CE 3 Lite" class="img"><hr>
             <h2>OnePlus Nord CE 3 Lite </h2>
             <del>Rs. 25,999</del>
             <ins class="price">Rs. 19,999</ins>
-            <button>Add to cart</button>
+            <div class="quantity" align="">
+                <button class="decrement">-</button>
+                <span class="quantity-value">1</span>
+                <button class="increment">+</button>
+            </div>
+            <button class="add-to-cart" onclick="alert('Item added to cart!')">Add to cart</button>
         </div> 
         <div class="card">
-            <img src="../Images/Lava Agni 2.jpg" alt="" class="img"><hr>
+            <img src="../Images/Lava Agni 2.jpg" alt="Lava Agni 2" class="img"><hr>
             <h2>Lava Agni 2</h2>
             <del>Rs. 29,999</del>
             <ins class="price">Rs. 22,999</ins>
-            <button>Add to cart</button>
+            <div class="quantity" align="">
+                <button class="decrement">-</button>
+                <span class="quantity-value">1</span>
+                <button class="increment">+</button>
+            </div>
+            <button class="add-to-cart" onclick="alert('Item added to cart!')">Add to cart</button>
         </div> 
         <div class="card">
-            <img src="../IMAGES/xiaomi-13-pro.jpg" alt="" class="img" height="180" width="200"><hr>
+            <img src="../IMAGES/xiaomi-13-pro.jpg" alt="xiaomi 13 pro" class="img" height="180" width="200"><hr>
             <h2>Xiaomi 13 Pro</h2>
             <del>Rs. 89,999</del>
             <ins class="price">Rs. 79,999</ins>
-            <button>Add to cart</button>
+            <div class="quantity" align="">
+                <button class="decrement">-</button>
+                <span class="quantity-value">1</span>
+                <button class="increment">+</button>
+            </div>
+            <button class="add-to-cart" onclick="alert('Item added to cart!')">Add to cart</button>
         </div>
         <div class="card">
-            <img src="../Images/rog.jpeg" alt="" class="img"><hr>
+            <img src="../Images/rog.jpeg" alt="rog phone " class="img"><hr>
             <h2>ASUS ROG Phone 7</h2>
             <del>Rs. 84,999</del>
             <ins class="price">Rs. 74,999</ins>
-            <button>Add to cart</button>
+            <div class="quantity" align="">
+                <button class="decrement">-</button>
+                <span class="quantity-value">1</span>
+                <button class="increment">+</button>
+            </div>
+            <button class="add-to-cart" onclick="alert('Item added to cart!')">Add to cart</button>
         </div>
     </div>
     </section>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="/JS/main.js"></script>
+    <div id="cart">
+        <h2 align="center">Cart</h2>
+        <ul id="cart-items"></ul>
+        <p id="total-amount"></p>
+        <button id="checkout">Checkout</button>
+    </div> 
+    <footer>
+        <p>&copy; 2023 My E-commerce Website. All rights reserved.</p>
+    </footer>   
 </body>
 </html>
