--- a/HTML/home.html
+++ b/HTML/home.html
@@ -7,22 +7,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="/CSS/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         body{
             background-color: #9aaaba;
         }
     </style>
 </head>
-<body>
+<body>    
     <header>
-        <nav>
+        <nav class="navbar">
             <h2 id="shoppingproduct">Shopping products</h2>
-
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
-                <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"/>
-            </svg>
-            <i class="bx bx-shopping-bag"></i>
-        </nav>
+          
+            <div class="cart-icon-wrapper">
+              <!-- <a href="#" class="cart-icon"> -->
+                <a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i><span class="item-count">0</span></a>
+            </div>
+          </nav>
     </header>
     <section>
         <div class="grid">
@@ -136,4 +137,4 @@
         <p>&copy; 2023 My E-commerce Website. All rights reserved.</p>
     </footer>   
 </body>
-</html>
+</html> 
